增加一些经典题目

--- a/常用代码.md
+++ b/常用代码.md
@@ -1861,6 +1861,489 @@ def countNumbersWithUniqueDigits(n):
     return map[n]
 ```
 
+## 数组中仅有两个数仅出现一次，其余的数均出现两次，找出这两个数
+
+![Leetcode 260. Single Number III][leetcode_260]
+
+```python
+def singleNumber(nums):
+    """
+    :type nums: List[int]
+    :rtype: List[int]
+    """
+    mixed_xor = 0
+    for num in nums:
+        mixed_xor ^= num
+    diff = mixed_xor & (mixed_xor - 1) ^ mixed_xor
+    first = 0
+    second = 0
+    for num in nums:
+        if diff & num:
+            first ^= num
+        else:
+            second ^= num
+    return [first, second]
+```
+
+## 找出递增数列中第n位的数字
+
+![Leetcode 400. Nth Digit][leetcode_400]
+
+```python
+def findNthDigit(n):
+    """
+    :type n: int
+    :rtype: int
+    """
+    digits = 1
+    start = 1
+    length = 9
+    while (n > digits * length):
+        n -= digits * length
+        digits += 1
+        start *= 10
+        length *= 10
+    n -= 1
+    number = start + n // digits
+    return int(str(number)[n % digits])
+```
+
+## 计算小于n的质数的个数
+
+![Leetcode 204. Count Primes][leetcode_204]
+
+```python
+def countPrimes(n):
+    """
+    :type n: int
+    :rtype: int
+    """
+    if n < 2:
+        return 0
+    primes = [True] * n
+    primes[0] = False
+    primes[1] = False
+    for i in range(2, int(n ** 0.5) + 1):
+        if primes[i]:
+            for j in range(i * i, n, i):
+                primes[j] = False
+    return sum(primes)
+```
+
+## 由部分（可重复）给定数组元素相加得到指定值的情况数
+
+![Leetcode 377. Combination Sum IV][leetcode_377]
+
+```java
+public int combinationSum4(int[] nums, int target) {
+    int[] results = new int[target + 1];
+    results[0] = 1;
+    for (int i = 1; i <= target; i++) {
+        for (int num : nums) {
+            if (i - num >= 0) {
+                results[i] += results[i - num];
+            }
+        }
+    }
+    return results[target];
+}
+```
+
+## 在有序矩阵中寻找第k大的数
+
+![Leetcode 378. Kth Smallest Element in a Sorted Matrix][leetcode_378]
+
+```java
+public int kthSmallest(int[][] matrix, int k) {
+    class Item {
+        int value;
+        int i;
+        int j;
+
+        public Item(int value, int i, int j) {
+            this.value = value;
+            this.i = i;
+            this.j = j;
+        }
+    }
+    int m = matrix.length;
+    int n = matrix[0].length;
+    PriorityQueue<Item> minHeap = new PriorityQueue<>(new Comparator<Item>() {
+        @Override
+        public int compare(Item o1, Item o2) {
+            return o1.value - o2.value;
+        }
+    });
+    for (int j = 0; j < n; j++) {
+        minHeap.add(new Item(matrix[0][j], 0, j));
+    }
+    while (!minHeap.isEmpty()) {
+        Item item = minHeap.poll();
+        if (item.i < m - 1) {
+            minHeap.add(new Item(matrix[item.i + 1][item.j], item.i + 1, item.j));
+        }
+        k--;
+        if (k == 0) {
+            return item.value;
+        }
+    }
+    return 0;
+}
+```
+
+## 求n对括号的所有排列情况
+
+![Leetcode 22. Generate Parentheses][leetcode_22]
+
+```python
+def generateParenthesis(n):
+    """
+    :type n: int
+    :rtype: List[str]
+    """
+
+    def parenthesis(result, current, left, right):
+        if left == 0 and right == 0:
+            result.append(current)
+        elif left >= 0 and right >= left:
+            parenthesis(result, current + '(', left - 1, right)
+            parenthesis(result, current + ')', left, right - 1)
+
+    result = []
+    parenthesis(result, '', n, n)
+    return result
+```
+
+## 给定字符串数组，求最大不相交的两个字符串的长度积
+
+![Leetcode 318. Maximum Product of Word Lengths][leetcode_318]
+
+```java
+public int maxProduct(String[] words) {
+    int[] bits = new int[words.length];
+    int result = 0;
+    for (int i = 0; i < words.length; i++) {
+        int bit = 0;
+        for (char letter : words[i].toCharArray()) {
+            bit |= 1 << (letter - 'a');
+        }
+        bits[i] = bit;
+    }
+    for (int i = 0; i < bits.length; i++) {
+        for (int j = i + 1; j < bits.length; j++) {
+            if ((bits[i] & bits[j]) == 0 && words[i].length() * words[j].length() > result) {
+                result = words[i].length() * words[j].length();
+            }
+        }
+    }
+    return result;
+}
+```
+
+## 在由[1, n]组成的长为n + 1的数组中，寻找重复的那个数
+
+![Leetcode 287. Find the Duplicate Number][leetcode_287]
+
+```java
+public int findDuplicate(int[] nums) {
+    int low = 1;
+    int high = nums.length - 1;
+    while (low < high) {
+        int mid = (low + high) / 2;
+        int count = 0;
+        for (int num : nums) {
+            if (num <= mid) {
+                count++;
+            }
+        }
+        if (count <= mid) {
+            low = mid + 1;
+        } else {
+            high = mid;
+        }
+    }
+    return low;
+}
+```
+
+## 求给定数组的所有排列情况
+
+![Leetcode 46. Permutations][leetcode_46]
+
+```java
+public List<List<Integer>> permute(int[] nums) {
+    List<List<Integer>> result = new ArrayList<>();
+    result.add(new ArrayList<>());
+    for (int i = 0; i < nums.length; i++) {
+        List<List<Integer>> newResult = new ArrayList<>();
+        for (int j = 0; j <= i; j++) {
+            for (List<Integer> item : result) {
+                List<Integer> newItem = new ArrayList<>(item);
+                newItem.add(j, nums[i]);
+                newResult.add(newItem);
+            }
+        }
+        result = newResult;
+    }
+    return result;
+}
+```
+
+## 最长回文子序列
+
+![Leetcode 516. Longest Palindromic Subsequence][leetcode_516]
+
+```java
+public int longestPalindromeSubseq(String s) {
+    int[][] dp = new int[s.length()][s.length()];
+    for (int i = s.length() - 1; i >= 0; i--) {
+        dp[i][i] = 1;
+        for (int j = i + 1; j < s.length(); j++) {
+            if (s.charAt(i) == s.charAt(j)) {
+                dp[i][j] = dp[i + 1][j - 1] + 2;
+            } else {
+                dp[i][j] = Math.max(dp[i + 1][j], dp[i][j - 1]);
+            }
+        }
+    }
+    return dp[0][s.length() - 1];
+}
+```
+
+## 将[1, n]的数按字典排序
+
+![Leetcode 386. Lexicographical Numbers][leetcode_386]
+
+```python
+def lexicalOrder(n):
+    """
+    :type n: int
+    :rtype: List[int]
+    """
+
+    def dfs(result, current, n):
+        if current > n:
+            return
+        result.append(current)
+        current *= 10
+        if current <= n:
+            for i in range(10):
+                if current + i <= n:
+                    dfs(result, current + i, n)
+
+    result = []
+    for i in range(1, 10):
+        dfs(result, i, n)
+    return result
+```
+
+## 二叉搜索树迭代器
+
+![Leetcode 173. Binary Search Tree Iterator][leetcode_173]
+
+```python
+class BSTIterator(object):
+    def __init__(self, root):
+        """
+        :type root: TreeNode
+        """
+        self.stack = []
+        while root:
+            self.stack.append(root)
+            root = root.left
+
+    def hasNext(self):
+        """
+        :rtype: bool
+        """
+        return self.stack
+
+    def next(self):
+        """
+        :rtype: int
+        """
+        node = self.stack.pop()
+        result = node.val
+        node = node.right
+        while node:
+            self.stack.append(node)
+            node = node.left
+        return result
+```
+
+## 由[1, n]组成的二叉搜索树的个数
+
+![Leetcode 96. Unique Binary Search Trees][leetcode_96]
+
+```java
+public int numTrees(int n) {
+    int[] results = new int[n + 1];
+    results[0] = 1;
+    for (int i = 1; i <= n; i++) {
+        for (int j = 0; j < i; j++) {
+            results[i] += results[j] * results[i - j - 1];
+        }
+    }
+    return results[n];
+}
+```
+
+## 格雷码
+
+![Leetcode 89. Gray Code][leetcode_89]
+
+```python
+def grayCode(n):
+    """
+    :type n: int
+    :rtype: List[int]
+    """
+    return [i ^ (i >> 1) for i in range(1 << n)]
+```
+
+## 从m x n棋盘左上角走到右下角的路径总数
+
+![Leetcode 62. Unique Paths][leetcode_62]
+
+```java
+public int uniquePaths(int m, int n) {
+    int[][] dp = new int[m][n];
+    for (int i = 0; i < m; i++) {
+        dp[i][0] = 1;
+    }
+    for (int j = 0; j < n; j++) {
+        dp[0][j] = 1;
+    }
+    for (int i = 1; i < m; i++) {
+        for (int j = 1; j < n; j++) {
+            dp[i][j] = dp[i - 1][j] + dp[i][j - 1];
+        }
+    }
+    return dp[m - 1][n - 1];
+}
+```
+
+## 求循环移位的有序数组中的到最小值
+
+![Leetcode 153. Find Minimum in Rotated Sorted Array][leetcode_153]
+
+```java
+public int findMin(int[] nums) {
+    int low = 0;
+    int high = nums.length - 1;
+    while (low < high) {
+        if (nums[low] < nums[high]) {
+            return nums[low];
+        }
+        int mid = (low + high) / 2;
+        if (nums[mid] >= nums[low]) {
+            low = mid + 1;
+        } else {
+            high = mid;
+        }
+    }
+    return nums[low];
+}
+```
+
+## 求集合的所有子集
+
+![Leetcode 78. Subsets][leetcode_78]
+
+```python
+def subsets(nums):
+    """
+    :type nums: List[int]
+    :rtype: List[List[int]]
+    """
+    result = []
+    for i in range(1 << len(nums)):
+        current = []
+        for j in range(len(nums)):
+            if i & 1 << j:
+                current.append(nums[j])
+        result.append(current)
+    return result
+```
+
+## 判断数组arr中是否存在arr[i] &lt; arr[j] &lt; arr[k]
+
+![Leetcode 334. Increasing Triplet Subsequence][leetcode_334]
+
+```java
+public boolean increasingTriplet(int[] nums) {
+    int first = Integer.MAX_VALUE;
+    int second = Integer.MAX_VALUE;
+    for (int num : nums) {
+        if (num < first) {
+            first = num;
+        } else if (num < second && num > first) {
+            second = num;
+        } else if (num > second) {
+            return true;
+        }
+    }
+    return false;
+}
+```
+
+## 查找数组中第k大的数
+
+![Leetcode 215. Kth Largest Element in an Array][leetcode_215]
+
+```python
+def findKthLargest(nums, k):
+    """
+    :type nums: List[int]
+    :type k: int
+    :rtype: int
+    """
+
+    def kth_largest(nums, start, end, k):
+        pivot = nums[end]
+        left = start
+        for i in range(start, end):
+            if nums[i] <= pivot:
+                nums[left], nums[i] = nums[i], nums[left]
+                left += 1
+        nums[left], nums[end] = nums[end], nums[left]
+        if left == k:
+            return nums[left]
+        elif left < k:
+            return kth_largest(nums, left + 1, end, k)
+        else:
+            return kth_largest(nums, start, left - 1, k)
+
+    return kth_largest(nums, 0, len(nums) - 1, len(nums) - k)
+```
+
+## 链表删除倒数第n个结点
+
+![Leetcode 19. Remove Nth Node From End of List][leetcode_19]
+
+```python
+def removeNthFromEnd(head, n):
+    """
+    :type head: ListNode
+    :type n: int
+    :rtype: ListNode
+    """
+    first = head
+    second = head
+    prev = head
+    while n:
+        first = first.next
+        n -= 1
+    while first:
+        first = first.next
+        prev = second
+        second = second.next
+    if second == head:
+        return head.next
+    prev.next = prev.next.next
+    return head
+```
+
 [leetcode_461]: https://leetcode.com/problems/hamming-distance/#/description
 
 [leetcode_136]: https://leetcode.com/problems/single-number/#/description
@@ -1920,3 +2403,43 @@ def countNumbersWithUniqueDigits(n):
 [leetcode_539]: https://leetcode.com/problems/minimum-time-difference/#/description
 
 [leetcode_357]: https://leetcode.com/problems/count-numbers-with-unique-digits/#/description
+
+[leetcode_260]: https://leetcode.com/problems/single-number-iii/#/description
+
+[leetcode_400]: https://leetcode.com/problems/nth-digit/#/description
+
+[leetcode_204]: https://leetcode.com/problems/count-primes/#/description
+
+[leetcode_377]: https://leetcode.com/problems/combination-sum-iv/#/description
+
+[leetcode_378]: https://leetcode.com/problems/kth-smallest-element-in-a-sorted-matrix/#/description
+
+[leetcode_22]: https://leetcode.com/problems/generate-parentheses/#/description
+
+[leetcode_318]: https://leetcode.com/problems/maximum-product-of-word-lengths/#/description
+
+[leetcode_287]: https://leetcode.com/problems/find-the-duplicate-number/#/description
+
+[leetcode_46]: https://leetcode.com/problems/permutations/#/description
+
+[leetcode_516]: https://leetcode.com/problems/longest-palindromic-subsequence/#/description
+
+[leetcode_386]: https://leetcode.com/problems/lexicographical-numbers/#/description
+
+[leetcode_173]: https://leetcode.com/problems/binary-search-tree-iterator/#/description
+
+[leetcode_96]: https://leetcode.com/problems/unique-binary-search-trees/#/description
+
+[leetcode_89]: https://leetcode.com/problems/gray-code/#/description
+
+[leetcode_62]: https://leetcode.com/problems/unique-paths/#/description
+
+[leetcode_153]: https://leetcode.com/problems/find-minimum-in-rotated-sorted-array/#/description
+
+[leetcode_78]: https://leetcode.com/problems/subsets/#/description
+
+[leetcode_334]: https://leetcode.com/problems/increasing-triplet-subsequence/#/description
+
+[leetcode_215]: https://leetcode.com/problems/kth-largest-element-in-an-array/#/description
+
+[leetcode_19]: https://leetcode.com/problems/remove-nth-node-from-end-of-list/#/description
