增加一些经典题目

--- a/常用代码.md
+++ b/常用代码.md
@@ -2344,6 +2344,357 @@ def removeNthFromEnd(head, n):
     return head
 ```
 
+## 判断数组是否可以拼接为正方形
+
+![Leetcode 473. Matchsticks to Square][leetcode_473]
+
+```java
+public boolean makesquare(int[] nums) {
+    class Utils {
+        boolean square(int[] nums, int[] edges, int start) {
+            if (start == nums.length) {
+                return edges[0] == 0 && edges[1] == 0 && edges[2] == 0 && edges[3] == 0;
+            }
+            int current = nums[start];
+            for (int i = 0; i < edges.length; i++) {
+                if (edges[i] >= current) {
+                    edges[i] -= current;
+                    if (square(nums, edges, start + 1)) {
+                        return true;
+                    }
+                    edges[i] += current;
+                }
+            }
+            return false;
+        }
+    }
+    if (nums.length < 4) {
+        return false;
+    }
+    int sumNums = 0;
+    for (int num : nums) {
+        sumNums += num;
+    }
+    if (sumNums % 4 != 0) {
+        return false;
+    }
+    int[] edges = new int[4];
+    Arrays.fill(edges, sumNums / 4);
+    Arrays.sort(nums);
+    for (int left = 0, right = nums.length - 1; left < right; left++, right--) {
+        int temp = nums[left];
+        nums[left] = nums[right];
+        nums[right] = temp;
+    }
+    Utils utils = new Utils();
+    return utils.square(nums, edges, 0);
+}
+```
+
+## 快速`pow()`
+
+![Leetcode 372. Super Pow][leetcode_372]
+
+```java
+public int normalPow(int a, int b) {
+    int result = 1;
+    while (b != 0) {
+        if (b % 2 != 0)
+            result = result * a % M;
+        a = a * a % M;
+        b /= 2;
+    }
+    return result;
+}
+
+public int superPow(int a, int[] b) {
+    a %= M;
+    int result = 1;
+    for (int i = b.length - 1; i >= 0; i--) {
+        result = result * normalPow(a, b[i]) % M;
+        a = normalPow(a, 10);
+    }
+    return result;
+```
+
+## 判断数组是否可以分为相等的两部分
+
+![Leetcode 416. Partition Equal Subset Sum][leetcode_416]
+
+```java
+public boolean canPartition(int[] nums) {
+    int target = 0;
+    for (int num : nums) {
+        target += num;
+    }
+    if (target % 2 == 1) {
+        return false;
+    }
+    target /= 2;
+    boolean[][] dp = new boolean[nums.length + 1][target + 1];
+    dp[0][0] = true;
+    for (int i = 1; i <= nums.length; i++) {
+        for (int j = 0; j <= target; j++) {
+            dp[i][j] = dp[i - 1][j];
+            if (j >= nums[i - 1]) {
+                dp[i][j] = dp[i][j] || dp[i - 1][j - nums[i - 1]];
+            }
+        }
+    }
+    return dp[nums.length][target];
+}
+```
+
+## 在矩阵中查找指定值
+
+![Leetcode 240. Search a 2D Matrix II][leetcode_240]
+
+```python
+def searchMatrix(matrix, target):
+    """
+    :type matrix: List[List[int]]
+    :type target: int
+    :rtype: bool
+    """
+    if not matrix:
+        return False
+    i = 0
+    j = len(matrix[0]) - 1
+    while i < len(matrix) and j >= 0:
+        current = matrix[i][j]
+        if current == target:
+            return True
+        elif current > target:
+            j -= 1
+        else:
+            i += 1
+    return False
+```
+
+## 将矩阵顺时针旋转90度
+
+![Leetcode 48. Rotate Image][leetcode_48]
+
+```python
+def rotate(matrix):
+    """
+    :type matrix: List[List[int]]
+    :rtype: void Do not return anything, modify matrix in-place instead.
+    """
+    m = len(matrix)
+    n = len(matrix[0])
+    for i in range(m // 2):
+        matrix[i], matrix[m - i - 1] = matrix[m - i - 1], matrix[i]
+    for i in range(m):
+        for j in range(i + 1, n):
+            matrix[i][j], matrix[j][i] = matrix[j][i], matrix[i][j]
+```
+
+## 最长递增子序列
+
+![Leetcode 300. Longest Increasing Subsequence][leetcode_300]
+
+```python
+def lengthOfLIS(nums):
+    """
+    :type nums: List[int]
+    :rtype: int
+    """
+    if not nums:
+        return 0
+    dp = [1] * len(nums)
+    for i in range(1, len(nums)):
+        for j in range(i):
+            if nums[i] > nums[j]:
+                dp[i] = max(dp[i], dp[j] + 1)
+
+    return max(dp)
+```
+
+## 求二维矩阵由左上角到右下角的最小和
+
+![Leetcode 64. Minimum Path Sum][leetcode_64]
+
+```java
+public int minPathSum(int[][] grid) {
+    int m = grid.length;
+    int n = grid[0].length;
+    int[][] dp = new int[m][n];
+    dp[0][0] = grid[0][0];
+    for (int i = 1; i < m; i++) {
+        dp[i][0] = dp[i - 1][0] + grid[i][0];
+    }
+    for (int j = 1; j < n; j++) {
+        dp[0][j] = dp[0][j - 1] + grid[0][j];
+    }
+    for (int i = 1; i < m; i++) {
+        for (int j = 1; j < n; j++) {
+            dp[i][j] = Math.min(dp[i - 1][j], dp[i][j - 1]) + grid[i][j];
+        }
+    }
+    return dp[m - 1][n - 1];
+}
+```
+
+## 将由0、1、2组成的数组排序
+
+![Leetcode 75. Sort Colors][leetcode_75]
+
+```python
+def sortColors(nums):
+    """
+    :type nums: List[int]
+    :rtype: void Do not return anything, modify nums in-place instead.
+    """
+    left = 0
+    while left < len(nums) and nums[left] == 0:
+        left += 1
+    right = len(nums) - 1
+    while right >= 0 and nums[right] == 2:
+        right -= 1
+    current = left
+    while current <= right and left <= right:
+        if nums[current] == 0:
+            if current == left:
+                current += 1
+            else:
+                nums[left], nums[current] = nums[current], nums[left]
+            left += 1
+        elif nums[current] == 2:
+            if current == right:
+                current += 1
+            else:
+                nums[right], nums[current] = nums[current], nums[right]
+            right -= 1
+        else:
+            current += 1
+```
+
+## 求第n位仅由指定因数组成的数字
+
+![Leetcode 313. Super Ugly Number][leetcode_313]
+
+```java
+public int nthSuperUglyNumber(int n, int[] primes) {
+    int[] factors = new int[primes.length];
+    Arrays.fill(factors, 1);
+    int[] indexes = new int[primes.length];
+    Arrays.fill(indexes, -1);
+    int[] ugly = new int[n];
+    for (int i = 0; i < n; i++) {
+        int theMin = Integer.MAX_VALUE;
+        for (int factor : factors) {
+            theMin = Math.min(theMin, factor);
+        }
+        ugly[i] = theMin;
+        for (int j = 0; j < factors.length; j++) {
+            if (ugly[i] == factors[j]) {
+                indexes[j]++;
+                factors[j] = ugly[indexes[j]] * primes[j];
+            }
+        }
+    }
+    return ugly[ugly.length - 1];
+}
+```
+
+## 数组中查找极大值
+
+![Leetcode 162. Find Peak Elementr][leetcode_162]
+
+```java
+public int findPeakElement(int[] nums) {
+    if (nums.length == 1 || nums[0] > nums[1]) {
+        return 0;
+    }
+    if (nums[nums.length - 2] < nums[nums.length - 1]) {
+        return nums.length - 1;
+    }
+    int low = 0;
+    int high = nums.length - 1;
+    while (low < high) {
+        int mid = (low + high) / 2;
+        if (nums[mid] < nums[mid + 1]) {
+            low = mid + 1;
+        } else {
+            high = mid;
+        }
+    }
+    return low;
+}
+```
+
+## 判断n能否由平方数的和组成
+
+![Leetcode 279. Perfect Squares][leetcode_279]
+
+```python
+def numSquares(self, n):
+    """
+    :type n: int
+    :rtype: int
+    """
+    dp = [n] * (n + 1)
+    dp[0] = 0
+    for i in range(1, n + 1):
+        j = 1
+        while j * j <= i:
+            dp[i] = min(dp[i], dp[i - j * j] + 1)
+            j += 1
+    return dp[n]
+```
+
+## 删除二叉搜索树中的结点
+
+![Leetcode 450. Delete Node in a BST][leetcode_450]
+
+```python
+def deleteNode(root, key):
+    """
+    :type root: TreeNode
+    :type key: int
+    :rtype: TreeNode
+    """
+    if not root:
+        return None
+    if root.val > key:
+        root.left = deleteNode(root.left, key)
+    elif root.val < key:
+        root.right = deleteNode(root.right, key)
+    else:
+        if not root.left:
+            return root.right
+        elif not root.right:
+            return root.left
+        else:
+            replace = root.right
+            while replace.left:
+                replace = replace.left
+            root.val = replace.val
+            root.right = deleteNode(root.right, root.val)
+    return root
+```
+
+## 检查字符串是否是合法的二叉树前序遍历结果
+
+![Leetcode 331. Verify Preorder Serialization of a Binary Tree][leetcode_331]
+
+```python
+def isValidSerialization(self, preorder):
+    """
+    :type preorder: str
+    :rtype: bool
+    """
+    degree = -1
+    for node in preorder.split(','):
+        degree += 1
+        if degree > 0:
+            return False
+        if node != '#':
+            degree -= 2
+    return degree == 0
+```
+
 [leetcode_461]: https://leetcode.com/problems/hamming-distance/#/description
 
 [leetcode_136]: https://leetcode.com/problems/single-number/#/description
@@ -2443,3 +2794,29 @@ def removeNthFromEnd(head, n):
 [leetcode_215]: https://leetcode.com/problems/kth-largest-element-in-an-array/#/description
 
 [leetcode_19]: https://leetcode.com/problems/remove-nth-node-from-end-of-list/#/description
+
+[leetcode_473]: https://leetcode.com/problems/matchsticks-to-square/#/description
+
+[leetcode_372]: https://leetcode.com/problems/super-pow/#/description
+
+[leetcode_416]: https://leetcode.com/problems/partition-equal-subset-sum/#/description
+
+[leetcode_240]: https://leetcode.com/problems/search-a-2d-matrix-ii/#/description
+
+[leetcode_48]: https://leetcode.com/problems/rotate-image/#/description
+
+[leetcode_300]: https://leetcode.com/problems/longest-increasing-subsequence/#/description
+
+[leetcode_64]: https://leetcode.com/problems/minimum-path-sum/#/description
+
+[leetcode_75]: https://leetcode.com/problems/sort-colors/#/description
+
+[leetcode_313]: https://leetcode.com/problems/super-ugly-number/#/description
+
+[leetcode_162]: https://leetcode.com/problems/find-peak-element/#/description
+
+[leetcode_279]: https://leetcode.com/problems/perfect-squares/#/description
+
+[leetcode_450]: https://leetcode.com/problems/delete-node-in-a-bst/#/description
+
+[leetcode_331]: https://leetcode.com/problems/verify-preorder-serialization-of-a-binary-tree/#/description
