--- a/常用代码.md
+++ b/常用代码.md
@@ -1152,7 +1152,7 @@ def fibonacci(n):
 
 ## 计算数字二进制表示的1的个数
 
-![Leetcode 461. Hamming Distance][leetcode_461]
+[Leetcode 461. Hamming Distance][leetcode_461]
 
 ```python
 def count_1s(num):
@@ -1165,7 +1165,7 @@ def count_1s(num):
 
 ## 数组中除一个数仅出现一次外，其他数均出现两次，找出这个数
 
-![Leetcode 136. Single Number][leetcode_136]
+[Leetcode 136. Single Number][leetcode_136]
 
 ```python
 def single_number(nums):
@@ -1177,7 +1177,7 @@ def single_number(nums):
 
 ## 长为n的数组中所有元素在[1, n]之间，元素最多出现两次，找出[1, n]中没出现的元素
 
-![Leetcode 448. Find All Numbers Disappeared in an Array][leetcode_448]
+[Leetcode 448. Find All Numbers Disappeared in an Array][leetcode_448]
 
 ```python
 def find_disappeared_numbers(nums):
@@ -1199,7 +1199,7 @@ def find_disappeared_numbers(nums):
 
 ## 不用`+`和`-`计算两个数的和
 
-![Leetcode 371. Sum of Two Integers][leetcode_371]
+[Leetcode 371. Sum of Two Integers][leetcode_371]
 
 ```java
 public int getSum(int a, int b) {
@@ -1217,7 +1217,7 @@ public int getSum(int a, int b) {
 
 ## 反转二叉树
 
-![Leetcode 226. Invert Binary Tree][leetcode_226]
+[Leetcode 226. Invert Binary Tree][leetcode_226]
 
 ```python
 def invertTree(root):
@@ -1237,7 +1237,7 @@ def invertTree(root):
 
 ## 把数组中所有0移动到尾部，数组元素保持相对顺序不变
 
-![Leetcode 283. Move Zeroes][leetcode_283]
+[Leetcode 283. Move Zeroes][leetcode_283]
 
 ```java
 public void moveZeroes(int[] nums) {
@@ -1257,7 +1257,7 @@ public void moveZeroes(int[] nums) {
 
 ## 定义一次move是将长为n的数组中n-1个数均加1，最少多少个move可以使得数组中所有元素相等
 
-![Leetcode 453. Minimum Moves to Equal Array Elements][leetcode_453]
+[Leetcode 453. Minimum Moves to Equal Array Elements][leetcode_453]
 
 ```python
 def minMoves(nums):
@@ -1270,7 +1270,7 @@ def minMoves(nums):
 
 ## 找出长为n的数组中出现次数大于⌊ n/2 ⌋的元素
 
-![Leetcode 169. Majority Element][leetcode_169]
+[Leetcode 169. Majority Element][leetcode_169]
 
 ```python
 def majorityElement(nums):
@@ -1292,7 +1292,7 @@ def majorityElement(nums):
 
 ## 十进制转换为7进制
 
-![Leetcode 504. Base 7][leetcode_504]
+[Leetcode 504. Base 7][leetcode_504]
 
 ```python
 public String convertToBase7(int num) {
@@ -1315,7 +1315,7 @@ public String convertToBase7(int num) {
 
 ## 指定长度二进制数，指定1的个数的所有可能情况
 
-![Leetcode 401. Binary Watch][leetcode_401]
+[Leetcode 401. Binary Watch][leetcode_401]
 
 ```python
 def get_combination(length, num_ones):
@@ -1335,7 +1335,7 @@ def get_combination(length, num_ones):
 
 ## 有序数组转二叉搜索树
 
-![Leetcode 108. Convert Sorted Array to Binary Search Tree][leetcode_108]
+[Leetcode 108. Convert Sorted Array to Binary Search Tree][leetcode_108]
 
 ```java
 TreeNode toBST(int[] nums, int start, int end) {
@@ -1359,7 +1359,7 @@ public TreeNode sortedArrayToBST(int[] nums) {
 
 ## 最大子数列问题
 
-![Leetcode 121. Best Time to Buy and Sell Stock][leetcode_121]
+[Leetcode 121. Best Time to Buy and Sell Stock][leetcode_121]
 
 ### 最小值为0
 
@@ -1387,7 +1387,7 @@ def max_subarray(nums):
 
 ## 判断一个数是否为2的幂次
 
-![Leetcode 231. Power of Two][leetcode_231]
+[Leetcode 231. Power of Two][leetcode_231]
 
 ```python
 def isPowerOfTwo(n):
@@ -1400,7 +1400,7 @@ def isPowerOfTwo(n):
 
 ## 判断一个数是否为4的幂次
 
-![Leetcode 342. Power of Four][leetcode_342]
+[Leetcode 342. Power of Four][leetcode_342]
 
 ```python
 def isPowerOfFour(num):
@@ -1415,11 +1415,11 @@ def isPowerOfFour(num):
 
 ### 二叉树的最近公共祖先
 
-![Leetcode ][leetcode_]
+[Leetcode ][leetcode_]
 
 ### 二叉搜索树的最近公共祖先
 
-![Leetcode 231. Power of Two][leetcode_231]
+[Leetcode 231. Power of Two][leetcode_231]
 
 ```java
 public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
@@ -1442,7 +1442,7 @@ public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
 
 ## 挑选数组中不连续的元素，使其和最大
 
-![Leetcode 198. House Robber][leetcode_198]
+[Leetcode 198. House Robber][leetcode_198]
 
 ```java
 public int rob(int[] nums) {
@@ -1461,7 +1461,7 @@ public int rob(int[] nums) {
 
 ## 镜像二叉树
 
-![Leetcode 101. Symmetric Tree][leetcode_101]
+[Leetcode 101. Symmetric Tree][leetcode_101]
 
 ```python
 def isSymmetric(root):
@@ -1484,7 +1484,7 @@ def isSymmetric(root):
 
 ## 判断二叉树是否平衡
 
-![Leetcode 110. Balanced Binary Tree][leetcode_110]
+[Leetcode 110. Balanced Binary Tree][leetcode_110]
 
 ```python
 def isBalanced(root):
@@ -1507,7 +1507,7 @@ def isBalanced(root):
 
 ## 二分法求平方根
 
-![Leetcode 367. Valid Perfect Square][leetcode_367]
+[Leetcode 367. Valid Perfect Square][leetcode_367]
 
 ```java
 public int mySqrt(int x) {
@@ -1530,7 +1530,7 @@ public int mySqrt(int x) {
 
 ## n!求末尾0的个数
 
-![Leetcode 172. Factorial Trailing Zeroes][leetcode_172]
+[Leetcode 172. Factorial Trailing Zeroes][leetcode_172]
 
 ```java
 public int trailingZeroes(int n) {
@@ -1546,7 +1546,7 @@ public int trailingZeroes(int n) {
 
 ## 有序数组去重
 
-![Leetcode 26. Remove Duplicates from Sorted Array][leetcode_26]
+[Leetcode 26. Remove Duplicates from Sorted Array][leetcode_26]
 
 ```python
 def removeDuplicates(nums):
@@ -1573,7 +1573,7 @@ def removeDuplicates(nums):
 
 ## 链表判断环
 
-![Leetcode 141. Linked List Cycle][leetcode_141]
+[Leetcode 141. Linked List Cycle][leetcode_141]
 
 ```python
 def hasCycle(head):
@@ -1595,7 +1595,7 @@ def hasCycle(head):
 
 ## 判断是否为回文数
 
-![Leetcode 9. Palindrome Number][leetcode_9]
+[Leetcode 9. Palindrome Number][leetcode_9]
 
 ```java
 public boolean isPalindrome(int x) {
@@ -1616,7 +1616,7 @@ public boolean isPalindrome(int x) {
 
 ## 是否存在二叉树根到叶子节点路径和为指定值
 
-![Leetcode 112. Path Sum][leetcode_112]
+[Leetcode 112. Path Sum][leetcode_112]
 
 ```python
 def hasPathSum(root, sum):
@@ -1635,7 +1635,7 @@ def hasPathSum(root, sum):
 
 ## 找出字符串中所有变位词
 
-![Leetcode 438. Find All Anagrams in a String][leetcode_438]
+[Leetcode 438. Find All Anagrams in a String][leetcode_438]
 
 ```java
 public List<Integer> findAnagrams(String s, String p) {
@@ -1669,7 +1669,7 @@ public List<Integer> findAnagrams(String s, String p) {
 
 ## 判断两个字符串是否为同构字符串
 
-![Leetcode 205. Isomorphic Strings][leetcode_205]
+[Leetcode 205. Isomorphic Strings][leetcode_205]
 
 ```java
 public boolean isIsomorphic(String s, String t) {
@@ -1698,7 +1698,7 @@ public boolean isIsomorphic(String s, String t) {
 
 ## 判断一个数是否为其全部约数的和
 
-![Leetcode 507. Perfect Number][leetcode_507]
+[Leetcode 507. Perfect Number][leetcode_507]
 
 ```python
 def checkPerfectNumber(num):
@@ -1721,7 +1721,7 @@ def checkPerfectNumber(num):
 
 ## 打乱数组元素
 
-![Leetcode 384. Shuffle an Array][leetcode_384]
+[Leetcode 384. Shuffle an Array][leetcode_384]
 
 ```java
 public void shuffle(int[] nums) {
@@ -1781,7 +1781,7 @@ int random7(){
 
 ## 计算数组A、B、C、D中有多少种(i, j, k, l)使得A[i] + B[j] + C[k] + D[l] = 0
 
-![Leetcode 454. 4Sum II][leetcode_454]
+[Leetcode 454. 4Sum II][leetcode_454]
 
 ```python
 def fourSumCount(A, B, C, D):
@@ -1810,7 +1810,7 @@ def fourSumCount(A, B, C, D):
 
 ## 计算给出的多个时间中，最小的时间差
 
-![Leetcode 539. Minimum Time Difference][leetcode_539]
+[Leetcode 539. Minimum Time Difference][leetcode_539]
 
 ```java
 public int findMinDifference(List<String> timePoints) {
@@ -1841,7 +1841,7 @@ public int findMinDifference(List<String> timePoints) {
 
 ## 计算\[0, 10^n)中各位数字不同的数的个数
 
-![Leetcode 357. Count Numbers with Unique Digits][leetcode_357]
+[Leetcode 357. Count Numbers with Unique Digits][leetcode_357]
 
 ```python
 def countNumbersWithUniqueDigits(n):
@@ -1863,7 +1863,7 @@ def countNumbersWithUniqueDigits(n):
 
 ## 数组中仅有两个数仅出现一次，其余的数均出现两次，找出这两个数
 
-![Leetcode 260. Single Number III][leetcode_260]
+[Leetcode 260. Single Number III][leetcode_260]
 
 ```python
 def singleNumber(nums):
@@ -1887,7 +1887,7 @@ def singleNumber(nums):
 
 ## 找出递增数列中第n位的数字
 
-![Leetcode 400. Nth Digit][leetcode_400]
+[Leetcode 400. Nth Digit][leetcode_400]
 
 ```python
 def findNthDigit(n):
@@ -1910,7 +1910,7 @@ def findNthDigit(n):
 
 ## 计算小于n的质数的个数
 
-![Leetcode 204. Count Primes][leetcode_204]
+[Leetcode 204. Count Primes][leetcode_204]
 
 ```python
 def countPrimes(n):
@@ -1932,7 +1932,7 @@ def countPrimes(n):
 
 ## 由部分（可重复）给定数组元素相加得到指定值的情况数
 
-![Leetcode 377. Combination Sum IV][leetcode_377]
+[Leetcode 377. Combination Sum IV][leetcode_377]
 
 ```java
 public int combinationSum4(int[] nums, int target) {
@@ -1951,7 +1951,7 @@ public int combinationSum4(int[] nums, int target) {
 
 ## 在有序矩阵中寻找第k大的数
 
-![Leetcode 378. Kth Smallest Element in a Sorted Matrix][leetcode_378]
+[Leetcode 378. Kth Smallest Element in a Sorted Matrix][leetcode_378]
 
 ```java
 public int kthSmallest(int[][] matrix, int k) {
@@ -1993,7 +1993,7 @@ public int kthSmallest(int[][] matrix, int k) {
 
 ## 求n对括号的所有排列情况
 
-![Leetcode 22. Generate Parentheses][leetcode_22]
+[Leetcode 22. Generate Parentheses][leetcode_22]
 
 ```python
 def generateParenthesis(n):
@@ -2016,7 +2016,7 @@ def generateParenthesis(n):
 
 ## 给定字符串数组，求最大不相交的两个字符串的长度积
 
-![Leetcode 318. Maximum Product of Word Lengths][leetcode_318]
+[Leetcode 318. Maximum Product of Word Lengths][leetcode_318]
 
 ```java
 public int maxProduct(String[] words) {
@@ -2042,7 +2042,7 @@ public int maxProduct(String[] words) {
 
 ## 在由[1, n]组成的长为n + 1的数组中，寻找重复的那个数
 
-![Leetcode 287. Find the Duplicate Number][leetcode_287]
+[Leetcode 287. Find the Duplicate Number][leetcode_287]
 
 ```java
 public int findDuplicate(int[] nums) {
@@ -2068,7 +2068,7 @@ public int findDuplicate(int[] nums) {
 
 ## 求给定数组的所有排列情况
 
-![Leetcode 46. Permutations][leetcode_46]
+[Leetcode 46. Permutations][leetcode_46]
 
 ```java
 public List<List<Integer>> permute(int[] nums) {
@@ -2091,7 +2091,7 @@ public List<List<Integer>> permute(int[] nums) {
 
 ## 最长回文子序列
 
-![Leetcode 516. Longest Palindromic Subsequence][leetcode_516]
+[Leetcode 516. Longest Palindromic Subsequence][leetcode_516]
 
 ```java
 public int longestPalindromeSubseq(String s) {
@@ -2112,7 +2112,7 @@ public int longestPalindromeSubseq(String s) {
 
 ## 将[1, n]的数按字典排序
 
-![Leetcode 386. Lexicographical Numbers][leetcode_386]
+[Leetcode 386. Lexicographical Numbers][leetcode_386]
 
 ```python
 def lexicalOrder(n):
@@ -2139,7 +2139,7 @@ def lexicalOrder(n):
 
 ## 二叉搜索树迭代器
 
-![Leetcode 173. Binary Search Tree Iterator][leetcode_173]
+[Leetcode 173. Binary Search Tree Iterator][leetcode_173]
 
 ```python
 class BSTIterator(object):
@@ -2173,7 +2173,7 @@ class BSTIterator(object):
 
 ## 由[1, n]组成的二叉搜索树的个数
 
-![Leetcode 96. Unique Binary Search Trees][leetcode_96]
+[Leetcode 96. Unique Binary Search Trees][leetcode_96]
 
 ```java
 public int numTrees(int n) {
@@ -2190,7 +2190,7 @@ public int numTrees(int n) {
 
 ## 格雷码
 
-![Leetcode 89. Gray Code][leetcode_89]
+[Leetcode 89. Gray Code][leetcode_89]
 
 ```python
 def grayCode(n):
@@ -2203,7 +2203,7 @@ def grayCode(n):
 
 ## 从m x n棋盘左上角走到右下角的路径总数
 
-![Leetcode 62. Unique Paths][leetcode_62]
+[Leetcode 62. Unique Paths][leetcode_62]
 
 ```java
 public int uniquePaths(int m, int n) {
@@ -2225,7 +2225,7 @@ public int uniquePaths(int m, int n) {
 
 ## 求循环移位的有序数组中的到最小值
 
-![Leetcode 153. Find Minimum in Rotated Sorted Array][leetcode_153]
+[Leetcode 153. Find Minimum in Rotated Sorted Array][leetcode_153]
 
 ```java
 public int findMin(int[] nums) {
@@ -2248,7 +2248,7 @@ public int findMin(int[] nums) {
 
 ## 求集合的所有子集
 
-![Leetcode 78. Subsets][leetcode_78]
+[Leetcode 78. Subsets][leetcode_78]
 
 ```python
 def subsets(nums):
@@ -2268,7 +2268,7 @@ def subsets(nums):
 
 ## 判断数组arr中是否存在arr[i] &lt; arr[j] &lt; arr[k]
 
-![Leetcode 334. Increasing Triplet Subsequence][leetcode_334]
+[Leetcode 334. Increasing Triplet Subsequence][leetcode_334]
 
 ```java
 public boolean increasingTriplet(int[] nums) {
@@ -2289,7 +2289,7 @@ public boolean increasingTriplet(int[] nums) {
 
 ## 查找数组中第k大的数
 
-![Leetcode 215. Kth Largest Element in an Array][leetcode_215]
+[Leetcode 215. Kth Largest Element in an Array][leetcode_215]
 
 ```python
 def findKthLargest(nums, k):
@@ -2319,7 +2319,7 @@ def findKthLargest(nums, k):
 
 ## 链表删除倒数第n个结点
 
-![Leetcode 19. Remove Nth Node From End of List][leetcode_19]
+[Leetcode 19. Remove Nth Node From End of List][leetcode_19]
 
 ```python
 def removeNthFromEnd(head, n):
@@ -2346,7 +2346,7 @@ def removeNthFromEnd(head, n):
 
 ## 判断数组是否可以拼接为正方形
 
-![Leetcode 473. Matchsticks to Square][leetcode_473]
+[Leetcode 473. Matchsticks to Square][leetcode_473]
 
 ```java
 public boolean makesquare(int[] nums) {
@@ -2393,7 +2393,7 @@ public boolean makesquare(int[] nums) {
 
 ## 快速`pow()`
 
-![Leetcode 372. Super Pow][leetcode_372]
+[Leetcode 372. Super Pow][leetcode_372]
 
 ```java
 public int normalPow(int a, int b) {
@@ -2419,7 +2419,7 @@ public int superPow(int a, int[] b) {
 
 ## 判断数组是否可以分为相等的两部分
 
-![Leetcode 416. Partition Equal Subset Sum][leetcode_416]
+[Leetcode 416. Partition Equal Subset Sum][leetcode_416]
 
 ```java
 public boolean canPartition(int[] nums) {
@@ -2447,7 +2447,7 @@ public boolean canPartition(int[] nums) {
 
 ## 在矩阵中查找指定值
 
-![Leetcode 240. Search a 2D Matrix II][leetcode_240]
+[Leetcode 240. Search a 2D Matrix II][leetcode_240]
 
 ```python
 def searchMatrix(matrix, target):
@@ -2473,7 +2473,7 @@ def searchMatrix(matrix, target):
 
 ## 将矩阵顺时针旋转90度
 
-![Leetcode 48. Rotate Image][leetcode_48]
+[Leetcode 48. Rotate Image][leetcode_48]
 
 ```python
 def rotate(matrix):
@@ -2492,7 +2492,7 @@ def rotate(matrix):
 
 ## 最长递增子序列
 
-![Leetcode 300. Longest Increasing Subsequence][leetcode_300]
+[Leetcode 300. Longest Increasing Subsequence][leetcode_300]
 
 ```python
 def lengthOfLIS(nums):
@@ -2513,7 +2513,7 @@ def lengthOfLIS(nums):
 
 ## 求二维矩阵由左上角到右下角的最小和
 
-![Leetcode 64. Minimum Path Sum][leetcode_64]
+[Leetcode 64. Minimum Path Sum][leetcode_64]
 
 ```java
 public int minPathSum(int[][] grid) {
@@ -2538,7 +2538,7 @@ public int minPathSum(int[][] grid) {
 
 ## 将由0、1、2组成的数组排序
 
-![Leetcode 75. Sort Colors][leetcode_75]
+[Leetcode 75. Sort Colors][leetcode_75]
 
 ```python
 def sortColors(nums):
@@ -2572,7 +2572,7 @@ def sortColors(nums):
 
 ## 求第n位仅由指定因数组成的数字
 
-![Leetcode 313. Super Ugly Number][leetcode_313]
+[Leetcode 313. Super Ugly Number][leetcode_313]
 
 ```java
 public int nthSuperUglyNumber(int n, int[] primes) {
@@ -2600,7 +2600,7 @@ public int nthSuperUglyNumber(int n, int[] primes) {
 
 ## 数组中查找极大值
 
-![Leetcode 162. Find Peak Elementr][leetcode_162]
+[Leetcode 162. Find Peak Elementr][leetcode_162]
 
 ```java
 public int findPeakElement(int[] nums) {
@@ -2626,7 +2626,7 @@ public int findPeakElement(int[] nums) {
 
 ## 判断n能否由平方数的和组成
 
-![Leetcode 279. Perfect Squares][leetcode_279]
+[Leetcode 279. Perfect Squares][leetcode_279]
 
 ```python
 def numSquares(self, n):
@@ -2646,7 +2646,7 @@ def numSquares(self, n):
 
 ## 删除二叉搜索树中的结点
 
-![Leetcode 450. Delete Node in a BST][leetcode_450]
+[Leetcode 450. Delete Node in a BST][leetcode_450]
 
 ```python
 def deleteNode(root, key):
@@ -2677,7 +2677,7 @@ def deleteNode(root, key):
 
 ## 检查字符串是否是合法的二叉树前序遍历结果
 
-![Leetcode 331. Verify Preorder Serialization of a Binary Tree][leetcode_331]
+[Leetcode 331. Verify Preorder Serialization of a Binary Tree][leetcode_331]
 
 ```python
 def isValidSerialization(self, preorder):
