增加Linux文件系统

--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -52,3 +52,40 @@
 - 不剥夺条件：进程所获得的资源在未使用完毕之前，不能被其他进程强行夺走，即只能由获得该资源的进程自己来释放。
 - 请求和保持条件：进程每次申请它所需要的一部分资源，在等待新资源的同时，进程继续占有已分配的资源。
 - 循环等待条件：存在一种进程资源的循环等待链，链中每一个进程已获得的资源同时被链中下一个进程所请求。
+
+## Linux文件系统
+
+一个典型的Linux分区如下图所示：
+
+![Linux Partition][linux_partition]
+
+分区的第一个部分是启动区（Boot Block），主要是为计算机开机服务的。
+
+启动区之后是超级区（Super Block），记录了文件系统的相关信息，如：
+
+- block与inode的总量
+- block与inode的大小
+- 文件系统的挂载时间、最近一次写入数据的时间、最近一次检验磁盘的时间等文件系统的相关信息
+- 一个validbit数值，若此文件系统已被挂载，则validbit为0，否则为1
+
+超级区之后是多个inode，每个inode的大小均固定为128B或256B，inode记录的文件数据有：
+
+- 该文件的访问模式（read／write／excute）
+- 该文件的所有者与组（owner／group）
+- 该文件的大小
+- 指向此文件内容的硬连接数
+- 该文件创建或状态改变的时间（ctime）
+- 最近一次的读取时间（atime）
+- 最近修改的时间（mtime）
+
+![inode][inode]
+
+inode之后是数据块（Data Block），其特点是：
+
+- block的大小（1KB、2KB、4KB）与数量在格式化完就不能再改变（除非重新格式化）
+- 每个block内最多只能放置一个文件的数据
+- 如果文件大于block的大小，则一个文件会占用多个block数量
+
+[linux_partition]: linux_partition.png
+
+[inode]: inode.png
